--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -55,7 +55,7 @@
       },
       "slide3": {
         "headline": "Successful projects are looking for talent, resources and work.",
-        "subheadline": "Human and projects"
+        "subheadline": "Humans and projects"
       }
     },
     "ctaSection": {
