--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -101,7 +101,7 @@
         "text": "We find each other, connect with each other, trust each other and support each other."
       },
       "thirdColumn": {
-        "headline": "Human and projects",
+        "headline": "Humans and projects",
         "text": "Your talent is important for the world. Turn your creativity into reality."
       }
     }
