corrected some english

--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -43,8 +43,8 @@
       "headline": "Respectful cooperation makes EVERYTHING possible."
     },
     "coffeeSection": {
-      "headline": "Your ingredients",
-      "headlineAppend": "in coffee",
+      "headline": "The ingredients",
+      "headlineAppend": "for your coffee",
       "slide1": {
         "headline": "All the features you need.",
         "subheadline": "World Cafe"
