use locales, fix lint

--- a/presenter/src/locales/de.json
+++ b/presenter/src/locales/de.json
@@ -1,5 +1,8 @@
 {
   "about": {},
+  "auth": {
+    "content": "Logge ein..."
+  },
   "dataProtection": {
     "euDispute": {
       "content": "Die Europäische Kommission stellt eine Plattform zur Online-Streitbeilegung (OS) bereit: https://ec.europa.eu/consumers/odr/. Unsere E-Mail Adresse finden Sie im Impressum.",
