Better translation of defaultDescription.

--- a/presenter/src/locales/en.json
+++ b/presenter/src/locales/en.json
@@ -207,7 +207,7 @@
     }
   },
   "meta": {
-    "defaultDescription": "Expanding your reach Exploiting all possibilities together Quality of life",
+    "defaultDescription": "Expanding your reach making the most of opportunities enhance quality of life together",
     "defaultTitle": "DreamMall"
   },
   "optin": {
