--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -28,6 +28,9 @@
     "signin": "Signing In",
     "title": "DreamMall {'|'} Authentication"
   },
+  "buttons": {
+    "signout": "Sign Out"
+  },
   "error": {
     "404": {
       "h1": "404 Page Not Found",
