--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -5,7 +5,8 @@
     "title": "DreamMall {'|'} Authentifizierung"
   },
   "buttons": {
-    "signout": "Sign Out"
+    "signout": "Sign Out",
+    "toRoom": "Zum Treffen"
   },
   "error": {
     "404": {
