--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -7,6 +7,9 @@
   "buttons": {
     "signout": "Sign Out"
   },
+  "cafe": {
+    "welcome": "Wilkommen im Welten Café"
+  },
   "error": {
     "404": {
       "h1": "404 Seite nicht gefunden",
