--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -7,6 +7,9 @@
   "buttons": {
     "signout": "Sign Out"
   },
+  "cafe": {
+    "welcome": "Welcome in the World Café"
+  },
   "error": {
     "404": {
       "h1": "404 Page Not Found",
