Change text and button colors.

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -9,7 +9,7 @@
     "toRoom": "Zum Treffen"
   },
   "cafe": {
-    "welcome": "Wilkommen im Welten Café"
+    "welcome": "Weltencafé"
   },
   "error": {
     "404": {
