--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -9,7 +9,7 @@
     "toRoom": "To the meeting"
   },
   "cafe": {
-    "welcome": "Welcome in the World Café"
+    "welcome": "World Cafe"
   },
   "error": {
     "404": {
