--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -21,6 +21,12 @@
       "text": "Something went wrong."
     }
   },
+  "menu": {
+    "worldCafe": "World Cafe",
+    "mall": "Mall",
+    "cockpit": "Cockpit",
+    "userPhrase": "Talk to your friends"
+  },
   "meta": {
     "defaultDescription": "Expanding your reach making the most of opportunities enhance quality of life together",
     "defaultTitle": "DreamMall"
