--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -26,7 +26,11 @@
     "worldCafe": "World Cafe",
     "mall": "Mall",
     "cockpit": "Cockpit",
-    "userPhrase": "Talk to your friends"
+    "userPhrase": "Talk to your friends",
+    "theme": {
+      "light": "Light",
+      "dark": "Dark"
+    }
   },
   "meta": {
     "defaultDescription": "Expanding your reach making the most of opportunities enhance quality of life together",
