[feat] added new strings in locale file

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -5,8 +5,11 @@
     "title": "DreamMall {'|'} Authentifizierung"
   },
   "buttons": {
+    "newProject": "Neues Projekt",
+    "newTable": "Neuer Tisch",
     "signout": "Sign Out",
     "toAdmin": "Zum Admin",
+    "toAssistant": "Assistent",
     "toRoom": "Zum Treffen"
   },
   "cafe": {
