add title and tests

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -34,6 +34,7 @@
   },
   "meta": {
     "defaultDescription": "Deine Reichweite Erweitern Alle Möglichkeiten Miteinander Ausschöpfen Lebensqualität Leben",
-    "defaultTitle": "DreamMall"
+    "defaultTitle": "DreamMall",
+    "joinRoomTitle": "Raum beitreten"
   }
 }
