--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -34,6 +34,7 @@
   },
   "meta": {
     "defaultDescription": "Expanding your reach making the most of opportunities enhance quality of life together",
-    "defaultTitle": "DreamMall"
+    "defaultTitle": "DreamMall",
+    "joinRoomTitle": "Enter Room"
   }
 }
