--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -7,7 +7,8 @@
   "buttons": {
     "signout": "Sign Out",
     "toAdmin": "To the admin",
-    "toRoom": "To the meeting"
+    "toRoom": "To the meeting",
+    "toRoomIframe": "To the meeting (iframe)"
   },
   "cafe": {
     "welcome": "World Cafe"
