api call join meeting, testing, localication, reduce coverage

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -22,6 +22,9 @@
       "text": "Irgendetwas ist schief gegangen."
     }
   },
+  "joinRoomPage": {
+    "header": "Raum betreten als:"
+  },
   "menu": {
     "cockpit": "Cockpit",
     "mall": "Mall",
