--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -31,6 +31,7 @@
   "menu": {
     "cockpit": "Cockpit",
     "mall": "Mall",
+    "roomList": "Offene Räume",
     "theme": {
       "dark": "Dunkel",
       "light": "Hell"
