--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -31,6 +31,7 @@
   "menu": {
     "cockpit": "Cockpit",
     "mall": "Mall",
+    "roomList": "Open rooms",
     "theme": {
       "dark": "Dark",
       "light": "Light"
