Add theme colors for dropdown, adjust spacing and wording

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -7,7 +7,7 @@
   "buttons": {
     "newProject": "Neues Projekt",
     "newTable": "Neuer Tisch",
-    "signout": "Sign Out",
+    "signout": "Logout",
     "toAdmin": "Zum Admin",
     "toAssistant": "Assistent",
     "toRoom": "Zum Treffen"
