Add AboutMe (WIP)

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -20,6 +20,11 @@
   "cafe": {
     "welcome": "Weltencafé"
   },
+  "cockpit": {
+    "about-me": {
+      "header": "Über mich"
+    }
+  },
   "error": {
     "404": {
       "h1": "404 Seite nicht gefunden",
