feat(frontend): show open rooms sidebar (#1273)
remove timeout for refetch rooms
silent refresh without default layout
no default lazyut on auth page
more logs, use setRooms to update state
delay refetch open rooms 1 min, more console to debug
error handling refetch open rooms
handle click event on open room
type startTime in Room/OpenRoom is string
quick and dirty fixing of List Drawer, open rooms query, rooms store
Add rooms store.
Add function of ListNavigationDrawer.
Test remove handleOpenRooms.
remove space
change classname
resolve conflicts, remove Navigatin Drawer Component
remove unused prop
add locale, change tsconfig
coverage to 96%
render config
add toggle on camera icon, open sibebar
Add SearchField Component
 change files and folders for atomic design
add ListWithNavigationDrawer Component, change files and folders for atomic design
NavigationDrawer Component
Add ListElement Component
* Removing console statement and fix linting, so that the CI runs through.

Co-authored-by: Moriz Wahl <moriz.wahl@gmx.de>
Co-authored-by: ogerly <ogerly@tutanota.com>

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -31,6 +31,7 @@
   "menu": {
     "cockpit": "Cockpit",
     "mall": "Mall",
+    "roomList": "Offene Räume",
     "theme": {
       "dark": "Dunkel",
       "light": "Hell"
@@ -42,5 +43,8 @@
     "defaultDescription": "Deine Reichweite Erweitern Alle Möglichkeiten Miteinander Ausschöpfen Lebensqualität Leben",
     "defaultTitle": "DreamMall",
     "joinRoomTitle": "Raum beitreten"
+  },
+  "rooms": {
+    "participantCount": "{count} Teilnehmer"
   }
 }
