--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -31,6 +31,7 @@
   "menu": {
     "cockpit": "Cockpit",
     "mall": "Mall",
+    "roomList": "Open rooms",
     "theme": {
       "dark": "Dark",
       "light": "Light"
@@ -42,5 +43,8 @@
     "defaultDescription": "Expanding your reach making the most of opportunities enhance quality of life together",
     "defaultTitle": "DreamMall",
     "joinRoomTitle": "Enter Room"
+  },
+  "rooms": {
+    "participantCount": "{count} participants"
   }
 }
