--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -31,7 +31,6 @@
   "menu": {
     "cockpit": "Cockpit",
     "mall": "Mall",
-    "roomList": "Open rooms",
     "theme": {
       "dark": "Dark",
       "light": "Light"
@@ -46,5 +45,9 @@
   },
   "rooms": {
     "participantCount": "{count} participants"
+  },
+  "tablesDrawer": {
+    "header": "Open Tables",
+    "searchPlaceholder": "Open tables, attendees"
   }
 }
