Add missing translations

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -1,4 +1,9 @@
 {
+  "$vuetify": {
+    "input:": {
+      "clear": "Löschen",
+    },
+  },
   "auth": {
     "content": "Logge ein...",
     "signin": "Anmeldung",
