feat(frontend): improve open tables drawer design (#1404)
* Improve sidebar design, show messages for empty table list

* Adapt mobile tables drawer design

* Fix linting

* Fix locales

* Update snapshots

* Fix TableList test

* Don't render left tables drawer on small screens

* Adapt table info to Figma drafts

* Use correct border-radius and background color

* Remove some opacity

* Fix search field border and background color

* Fix linting

* Update snapshots

* Simplify top menu dom

* Update snapshots

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -1,6 +1,6 @@
 {
   "$vuetify": {
-    "input:": {
+    "input": {
       "clear": "Löschen"
     }
   },
@@ -53,6 +53,8 @@
   },
   "tablesDrawer": {
     "header": "Offene Tische",
+    "noResults": "Keine Ergebnisse gefunden",
+    "noTables": "Keine Tische verfügbar",
     "searchPlaceholder": "Offene Tische, Teilnehmer"
   }
 }
