change all room related terms to table related

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -15,7 +15,7 @@
     "signout": "Logout",
     "toAdmin": "Zum Admin",
     "toAssistant": "Assistent",
-    "toRoom": "Zum Treffen"
+    "toTable": "Zum Treffen"
   },
   "cafe": {
     "welcome": "Weltencafé"
@@ -30,7 +30,7 @@
       "text": "Irgendetwas ist schief gegangen."
     }
   },
-  "joinRoomPage": {
+  "joinTablePage": {
     "header": "Raum betreten als:"
   },
   "menu": {
@@ -46,9 +46,9 @@
   "meta": {
     "defaultDescription": "Deine Reichweite Erweitern Alle Möglichkeiten Miteinander Ausschöpfen Lebensqualität Leben",
     "defaultTitle": "DreamMall",
-    "joinRoomTitle": "Raum beitreten"
+    "joinTableTitle": "Raum beitreten"
   },
-  "rooms": {
+  "tables": {
     "participantCount": "{count} Teilnehmer"
   },
   "tablesDrawer": {
