Hande availability change; add mutations to store; split view and edit mode

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -22,7 +22,10 @@
   },
   "cockpit": {
     "about-me": {
-      "header": "Über mich"
+      "edit": {
+        "title": "Über mich",
+        "add": "Hinzufügen",
+      }
     }
   },
   "error": {
