Use mdi icons; style availability selector and detail edit; fix header font size

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -1,8 +1,10 @@
 {
   "$vuetify": {
+    "close": "Schließen",
+    "open": "Öffnen",
     "input": {
       "clear": "Löschen"
-    }
+    },
   },
   "auth": {
     "content": "Logge ein...",
