--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -4,7 +4,7 @@
     "open": "Öffnen",
     "input": {
       "clear": "Löschen"
-    },
+    }
   },
   "auth": {
     "content": "Logge ein...",
@@ -26,7 +26,7 @@
     "about-me": {
       "edit": {
         "title": "Über mich",
-        "add": "Hinzufügen",
+        "add": "Hinzufügen"
       }
     }
   },
