--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -4,7 +4,7 @@
     "open": "Open",
     "input": {
       "clear": "Clear"
-    },
+    }
   },
   "auth": {
     "content": "Logging in...",
@@ -26,7 +26,7 @@
     "about-me": {
       "edit": {
         "title": "About me",
-        "add": "Add",
+        "add": "Add"
       }
     }
   },
