--- a/admin/src/locales/de.json
+++ b/admin/src/locales/de.json
@@ -1,28 +1,4 @@
 {
-  "about": {
-    "h1": "Über",
-    "link1": "github.com",
-    "link2": "Webseite",
-    "text1": "Um mehr über diese Kochplatte zu erfahren kannst du dir den Quellcode auf {link} anschauen.",
-    "text2": "Du willst mehr erfahren? Besuche uns auf {link}."
-  },
-  "app": {
-    "inc": {
-      "h1": "Erhöhe den Zähler",
-      "menu": "Erhöhe",
-      "text": "Erhöhe: {count}"
-    },
-    "reset": {
-      "h1": "Den Zähler zurücksetzen",
-      "menu": "Zurücksetzen",
-      "text": "Zurücksetzen: {count}"
-    },
-    "value": {
-      "h1": "Der Zähler",
-      "menu": "Wert",
-      "text": "Der aktuelle Wert des Zählers lautet: {count}"
-    }
-  },
   "error": {
     "404": {
       "h1": "404 Seite nicht gefunden",
@@ -33,21 +9,20 @@
       "text": "Irgendetwas ist schief gegangen."
     }
   },
-  "home": {
-    "greet1": "Hochachtungsvoll",
-    "greet2": "Dein IT Team For Change",
-    "h1": "IT4C Frontend Kochplatte",
-    "text1": "Willkommen zu diesem minimalen Frontendstarter.",
-    "text2": "Es handelt sich um ein einfaches Beispiel um zu zeigen was so geht - nichts besonderes.",
-    "text3": "In dem Anwendungsbereich wirst du ein Zählerbeispiel finden, welches den Browserspeicher verwendet.",
-    "text4": "Fröhliches Programmieren"
-  },
   "language": {
     "german": "Deutsch"
   },
   "menu": {
-    "about": "Über",
-    "app": "Anwendung",
-    "home": "Daheim"
+    "project": "DreamMall",
+    "app": "Adminbereich"
+  },
+  "index": {
+    "header": "Willkommen im Adminbereich"
+  },
+  "users": {
+    "header": "Benutzer-Übersicht",
+    "email": "Email",
+    "phone": "Telefon",
+    "address": "Adresse"
   }
 }
