Add social media editing

--- a/frontend/src/locales/de.json
+++ b/frontend/src/locales/de.json
@@ -29,6 +29,7 @@
         "title": "Über mich"
       },
       "education-placeholder": "Meine Ausbildung",
+      "empty-social-media": "Social Media hinzufügen",
       "feeling-placeholder": "Wie ich mich heute fühle",
       "introduction-placeholder": "Meine Kurzvorstellung",
       "language-placeholder": "Sprachen, die ich spreche",
