--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -29,6 +29,7 @@
         "title": "About me"
       },
       "education-placeholder": "My education",
+      "empty-social-media": "Add Social Media",
       "feeling-placeholder": "How I feel today",
       "introduction-placeholder": "My introduction line",
       "language-placeholder": "Languages I speak",
